increase z-index of sidebar to fix card overlay

--- a/docs/css/sidebar.css
+++ b/docs/css/sidebar.css
@@ -46,7 +46,7 @@
     grid-row: 1/2;
     grid-column: 1/-1;
     text-align: start;
-    z-index: 1;
+    z-index: 2;
     height: initial;
   }
 
